<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".host.HostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        android:elevation="8dp">

        <LinearLayout
            android:id="@+id/host_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/host_news"
                style="@style/MenuItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news"/>

            <TextView
                android:id="@+id/host_scores"
                style="@style/MenuItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores"/>

            <TextView
                android:id="@+id/host_standings"
                style="@style/MenuItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standings"/>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.matbos.perform.common.ui.StateNotificationLayout
            android:id="@+id/host_notification_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <FrameLayout
            android:id="@+id/host_content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
